# DAS_Project

./: .gitignore  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
batch/: pipeline.sh  plot_loss_curve.sh  plot_reconstructions.sh
config/: config.yaml
docs/: changes.md  mkdocs.yaml
docs/source/: index.md
logs/: pipeline.err  pipeline.out  plot.out
models/: loss_history.json
notebooks/: Frequency_Analysis.ipynb  PCA.py  histogramcheck.ipynb  plot_reconstructions.py  script.py  visualize.ipynb
scripts/: plot_loss_curve.py  plot_reconstructions.py
src/dasproject/: data.py  evaluate.py  loss.py  model.py  train.py  utils.py  visualize.py
